--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         
         <header>
             <div>
-                <img src="https://github.com/WelllGss.png" alt="Foto de Wellington">
+                <a target="_blank" href="https://github.com/WelllGss">
+                    <img src="https://github.com/WelllGss.png" alt="Foto de Wellington">
+                </a>
             </div>
         </header>
 
