--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <link rel="stylesheet" href="./style.css">
 
+        <!-- não gosto de arroz doce -->
+        <!-- <script></script> -->
 
     </head>
     <body>
